plex.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pms
  namespace: plex
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pms
    spec:
      volumes:
      - name: config
        hostPath:
          path: /mergerFS/cachePool/plex/config
      - name: media
        hostPath:
          path: /mergerFS/pool/media
      - name: transcode
        hostPath:
          path: /mergerFS/cachePool/plex/transcode
      containers:
      - name: pms
        image: linuxserver/plex 
        volumeMounts:
        - name: config
          mountPath: /config
        - name: transcode
          mountPath: /transcode
        - name: media
          mountPath: /media
        ports:
        - name: pms
          containerPort: 32400
        readinessProbe:
          tcpSocket:
            port: pms
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: pms
          initialDelaySeconds: 15
          periodSeconds: 20
---
kind: Service
apiVersion: v1
metadata:
  name: plex-service
  namespace: plex
spec:
  selector:
    app: pms
  ports:
  - name: pms
    nodePort: 52252
    port: 32400
    protocol: TCP
    targetPort: pms
  - name: http
    port: 80
    protocol: TCP
    targetPort: pms
  - name: https
    port: 443
    protocol: TCP
    targetPort: 32443
  type: NodePort
