sabnzbd.yaml
---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: sabnzbd-deployment
   labels:
     app: sabnzbd
   namespace: plex
 spec:
   replicas: 1
   selector:
      matchLabels:
        app: sabnzbd
   template:
     metadata:
       labels:
         app: sabnzbd
 
     spec:
      containers:
         - name: sabnzbd
           image: linuxserver/sabnzbd
           ports:
             - containerPort: 6789
           volumeMounts:
             - mountPath: /config
               name: sabnzbd-config
             - mountPath: /downloads
               name: sabnzbd-downloads
             - mountPath: /incomplete-downloads
               name: sabnzbd-incomplete
      volumes:
        - name: sabnzbd-config
          hostPath:
            path: /mergerFS/cachePool/sabnzbd/config 
        - name: sabnzbd-downloads
          hostPath:
            path: /mergerFS/cachePool/downloads/complete
        - name: sabnzbd-incomplete
          hostPath:
            path: /mergerFS/cachePool/downloads/incomplete
---
kind: Service
apiVersion: v1
metadata:
  name: sabnzbd-service
  namespace: plex
spec:
  selector:
    app: sabnzbd
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
